crates/plotnik-lib/tests/02-parser/recovery_validation/field_equals_typo.txt
(node name = (identifier))
------------------ DIAGNOSTICS -------------------
error: fields use `:`, not `=`
 --> query.ptk:1:12
  |
1 | (node name = (identifier))
  |            ^
  |
help: use `:`
  |
1 - (node name = (identifier))
1 + (node name : (identifier))
  |
